more text updates

--- a/pages/enterprise.tmpl
+++ b/pages/enterprise.tmpl
@@ -23,10 +23,11 @@
       <div class="p-2 pt-4 mt-4 mt-md-2" style="flex-basis:33%; flex-grow: 0;">
         <div class="desc">
           <div class="card-header" style="background-color: #fff">
-            <i class="fas fa-dharmachakra fa-3x"></i>
+            <i class="fas fa-shield-alt fa-3x"></i>
           </div>
           <div class="card-body">
-            Built on Docker and Kubernetes
+            Setup your security and network configuration once rather than every time you deploy
+          a new app
           </div>
         </div>
       </div>
@@ -36,18 +37,17 @@
             <i class="fas fa-clipboard-check fa-3x"></i>
           </div>
           <div class="card-body">
-            Satisfy PCI / HIPAA / SOC2/ GDPR with a self-hosting inside your VPC
+            Satisfy PCI / HIPAA / SOC2 / GDPR with a with a dedicated single-tenant installation
           </div>
         </div>
       </div>
       <div class="p-2 pt-4 mt-4 mt-md-2" style="flex-basis:33%; flex-grow: 0;">
         <div class="desc">
           <div class="card-header" style="background-color: #fff">
-            <i class="fas fa-shield-alt fa-3x"></i>
+            <i class="fas fa-dharmachakra fa-3x"></i>
           </div>
           <div class="card-body">
-            Setup all your security and network configurations once rather than every time you deploy
-          a new app
+            Built on Docker and Kubernetes
           </div>
         </div>
       </div>
@@ -69,7 +69,7 @@
             <i class="fas fa-scroll fa-3x"></i>
           </div>
           <div class="card-body">
-            Full audit logging keeps a complete history of every change and who made it
+            Detailed audit logging keeps a complete history of every change and who made it
           </div>
         </div>
       </div>
