--- a/pages/layout.tmpl
+++ b/pages/layout.tmpl
@@ -31,7 +31,8 @@
 						<ul class="navbar-nav ml-auto mr-2">
 							<li class="nav-item ml-1 ml-md-4 mr-4 mr-md-0 {{ if eq .Active "features" }}active{{ end }}"><a class="nav-link" href="/features">Features</a></li>
 							<li class="nav-item ml-1 ml-md-4 mr-4 mr-md-0 {{ if eq .Active "blog" }}active{{ end }}"><a class="nav-link" href="/blog">Blog</a></li>
-							<li class="nav-item ml-1 ml-md-4 mr-4 mr-md-0"><a class="nav-link" href="https://docs.convox.com">Documentation</a></li>
+							<li class="nav-item ml-1 ml-md-4 mr-4 mr-md-0"><a class="nav-link" href="https://docs.convox.com">Docs</a></li>
+							<li class="nav-item ml-1 ml-md-4 mr-4 mr-md-0 {{ if eq .Active "enterprise" }}active{{ end }}"><a class="nav-link" href="/enterprise">Enterprise</a></li>
 							<li class="nav-item ml-1 ml-md-4 mr-4 mr-md-0 {{ if eq .Active "pricing" }}active{{ end }}"><a class="nav-link" href="/pricing">Pricing</a></li>
 						</ul>
 
