--- a/pages/enterprise.tmpl
+++ b/pages/enterprise.tmpl
@@ -26,8 +26,8 @@
             <i class="fas fa-shield-alt fa-3x"></i>
           </div>
           <div class="card-body">
-            Setup your security and network configuration once rather than every time you deploy
-          a new app
+           <p>Setup your security and network configuration once rather than every time you deploy
+          a new app</p>
           </div>
         </div>
       </div>
@@ -37,7 +37,7 @@
             <i class="fas fa-clipboard-check fa-3x"></i>
           </div>
           <div class="card-body">
-            Satisfy PCI / HIPAA / SOC2 / GDPR with a with a dedicated single-tenant installation
+            <p>Satisfy PCI / HIPAA / SOC2 / GDPR with a with a dedicated single-tenant installation</p>
           </div>
         </div>
       </div>
@@ -47,7 +47,7 @@
             <i class="fas fa-dharmachakra fa-3x"></i>
           </div>
           <div class="card-body">
-            Built on Docker and Kubernetes
+            <p>Built on Docker and Kubernetes</p>
           </div>
         </div>
       </div>
@@ -59,7 +59,7 @@
             <i class="fas fa-id-badge fa-3x"></i>
           </div>
           <div class="card-body">
-            Role based access control and enforced SSO including hardware key 2FA
+           <p>Role based access control and enforced SSO including hardware key 2FA</p>
           </div>
         </div>
       </div>
@@ -69,7 +69,7 @@
             <i class="fas fa-scroll fa-3x"></i>
           </div>
           <div class="card-body">
-            Detailed audit logging keeps a complete history of every change and who made it
+            <p>Detailed audit logging keeps a complete history of every change and who made it</p>
           </div>
         </div>
       </div>
@@ -79,12 +79,12 @@
             <i class="fas fa-life-ring fa-3x"></i>
           </div>
           <div class="card-body">
-           24x7 support with a one hour SLA
+           <p>24x7 support with a one hour SLA</p>
           </div>
         </div>
       </div>
     </div>
-            
+  </div>         
 </div>
 <div class="customers d-block">
   <div class="container text-center">
