--- a/assets/site.scss
+++ b/assets/site.scss
@@ -240,8 +240,8 @@ div.quotes {
 }
 
 div.enterprise-features {
-	padding-top: 40px;
-	padding-bottom: 40px;
+	padding-top: 20px;
+	padding-bottom: 60px;
 	background-color: #e3e6e9;
 	text-align: center;
 
@@ -258,7 +258,8 @@ div.enterprise-features {
 		color: #555;
 		font-size: 2.2rem;
 		margin: 0;
-		margin-bottom: 50px;
+		margin-top: 10px;
+		margin-bottom: 20px;
 	}
 }
 
