change get started to point to signup

--- a/pages/index.tmpl
+++ b/pages/index.tmpl
@@ -13,7 +13,7 @@
 						Onboard new developers in minutes.
 					</h3>
 					<div class="buttons">
-						<a class="btn btn-primary text-light" href="https://docs.convox.com/introduction/getting-started">
+						<a class="btn btn-primary text-light" href="https://console.convox.com/signup">
 							Get Started
 							<i class="far fa-arrow-alt-circle-right ml-1"></i>
 						</a>
