fix enterprise features layout and add meta tags

--- a/pages/enterprise.tmpl
+++ b/pages/enterprise.tmpl
@@ -74,7 +74,7 @@
         </div>
       </div>
       <div class="p-2 pt-4 mt-4 mt-md-2" style="flex-basis:33%; flex-grow: 0;">
-        <div class="feature-desc">
+        <div class="desc">
           <div class="card-header" style="background-color: #fff">
             <i class="fas fa-life-ring fa-3x"></i>
           </div>
