--- a/pages/layout.tmpl
+++ b/pages/layout.tmpl
@@ -1,12 +1,22 @@
 {{ define "main" }}
 	<html lang="en">
 		<head>
-			<title>Convox</title>
+			
 
 			<meta charset="utf-8">
 			<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
 			<link rel="icon" type="image/x-icon" href="/images/favicon.ico" />
+			<meta name="description" content="Convox makes it easy to deploy and manage your applications in the cloud. Built on Docker and Kubernetes, Convox provides a complete solution for local development, CI/CD, and autoscaling">
+			<meta property="og:image" content="https://convox.com/images/logo.png">
+			<meta name="twitter:site" content="@goconvox">
+			<meta name="twitter:creator" content="@goconvox">
+			<meta property="og:type" content="website">
+			<meta property="og:url" content="https://convox.com/">
+			<meta property="og:title" content="Convox Platform as a Service">
+			<meta property="og:site_name" content="Convox Platform as a Service">
+			<meta property="og:description" content="Convox makes it easy to deploy and manage your applications in the cloud. Built on Docker and Kubernetes, Convox provides a complete solution for local development, CI/CD, and autoscaling">
+			<title>Convox Platform as a Service</title>
 
 			<script src="/assets/site.js"></script>
 			<script>
