update date and og logo

--- a/pages/layout.tmpl
+++ b/pages/layout.tmpl
@@ -8,7 +8,7 @@
 
 			<link rel="icon" type="image/x-icon" href="/images/favicon.ico" />
 			<meta name="description" content="Convox makes it easy to deploy and manage your applications in the cloud. Built on Docker and Kubernetes, Convox provides a complete solution for local development, CI/CD, and autoscaling">
-			<meta property="og:image" content="https://convox.com/images/logo.png">
+			<meta property="og:image" content="https://convox.com/images/logos/convox_social_logo.png">
 			<meta name="twitter:site" content="@goconvox">
 			<meta name="twitter:creator" content="@goconvox">
 			<meta property="og:type" content="website">
