add dynamic tags to blog posts

--- a/pages/layout.tmpl
+++ b/pages/layout.tmpl
@@ -7,6 +7,14 @@
 			<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
 			<link rel="icon" type="image/x-icon" href="/images/favicon.ico" />
+			<script src="/assets/site.js"></script>
+			<script>
+				!function(){var analytics=window.analytics=window.analytics||[];if(!analytics.initialize)if(analytics.invoked)window.console&&console.error&&console.error("Segment snippet included twice.");else{analytics.invoked=!0;analytics.methods=["trackSubmit","trackClick","trackLink","trackForm","pageview","identify","reset","group","track","ready","alias","debug","page","once","off","on"];analytics.factory=function(t){return function(){var e=Array.prototype.slice.call(arguments);e.unshift(t);analytics.push(e);return analytics}};for(var t=0;t<analytics.methods.length;t++){var e=analytics.methods[t];analytics[e]=analytics.factory(e)}analytics.load=function(t,e){var n=document.createElement("script");n.type="text/javascript";n.async=!0;n.src="https://cdn.segment.com/analytics.js/v1/"+t+"/analytics.min.js";var a=document.getElementsByTagName("script")[0];a.parentNode.insertBefore(n,a);analytics._loadOptions=e};analytics.SNIPPET_VERSION="4.1.0";
+					analytics.load("{{ env "SEGMENT_TOKEN" }}");
+					analytics.page();
+				}}();
+			</script>
+			{{ block "head" . }}
 			<meta name="description" content="Convox makes it easy to deploy and manage your applications in the cloud. Built on Docker and Kubernetes, Convox provides a complete solution for local development, CI/CD, and autoscaling">
 			<meta property="og:image" content="https://convox.com/images/logos/convox_social_logo.png">
 			<meta name="twitter:site" content="@goconvox">
@@ -17,14 +25,7 @@
 			<meta property="og:site_name" content="Convox Platform as a Service">
 			<meta property="og:description" content="Convox makes it easy to deploy and manage your applications in the cloud. Built on Docker and Kubernetes, Convox provides a complete solution for local development, CI/CD, and autoscaling">
 			<title>Convox Platform as a Service</title>
-
-			<script src="/assets/site.js"></script>
-			<script>
-				!function(){var analytics=window.analytics=window.analytics||[];if(!analytics.initialize)if(analytics.invoked)window.console&&console.error&&console.error("Segment snippet included twice.");else{analytics.invoked=!0;analytics.methods=["trackSubmit","trackClick","trackLink","trackForm","pageview","identify","reset","group","track","ready","alias","debug","page","once","off","on"];analytics.factory=function(t){return function(){var e=Array.prototype.slice.call(arguments);e.unshift(t);analytics.push(e);return analytics}};for(var t=0;t<analytics.methods.length;t++){var e=analytics.methods[t];analytics[e]=analytics.factory(e)}analytics.load=function(t,e){var n=document.createElement("script");n.type="text/javascript";n.async=!0;n.src="https://cdn.segment.com/analytics.js/v1/"+t+"/analytics.min.js";var a=document.getElementsByTagName("script")[0];a.parentNode.insertBefore(n,a);analytics._loadOptions=e};analytics.SNIPPET_VERSION="4.1.0";
-					analytics.load("{{ env "SEGMENT_TOKEN" }}");
-					analytics.page();
-				}}();
-			</script>
+			{{ end }}
 		</head>
 		<body class="{{.Active}}">
 			<nav class="navbar navbar-expand-md fixed-top navbar-dark">
