--- a/pages/blog/post.tmpl
+++ b/pages/blog/post.tmpl
@@ -4,7 +4,7 @@
 
 	<meta property="og:description" content="{{.Description}}">
 	<meta property="og:image" content="{{.OgImage}}">
-	meta property="og:site_name" content="Convox Blog">
+	<meta property="og:site_name" content="Convox Blog">
 	<meta property="og:title" content="{{.Title}}">
 	<meta property="og:type" content="article">
 	<meta property="og:url" content="{{.URL}}">
