--- a/pages/enterprise.tmpl
+++ b/pages/enterprise.tmpl
@@ -37,7 +37,7 @@
             <i class="fas fa-clipboard-check fa-3x"></i>
           </div>
           <div class="card-body">
-            <p>Satisfy PCI / HIPAA / SOC2 / GDPR with a with a dedicated single-tenant installation</p>
+            <p>Satisfy PCI / HIPAA / SOC2 / GDPR with a dedicated single-tenant installation</p>
           </div>
         </div>
       </div>
