Load balancing blog post and adding SAML to SSO

--- a/pages/enterprise.tmpl
+++ b/pages/enterprise.tmpl
@@ -59,7 +59,7 @@
             <i class="fas fa-id-badge fa-3x"></i>
           </div>
           <div class="card-body">
-           <p>Role based access control and enforced SSO including hardware key 2FA</p>
+           <p>Role based access control and enforced SSO (SAML/LDAP) including hardware key 2FA</p>
           </div>
         </div>
       </div>
