--- a/pages/pricing.tmpl
+++ b/pages/pricing.tmpl
@@ -66,7 +66,7 @@
 									<li>Unlimited Users</li>
 									<li>Audit Logs</li>
 									<li>Role-Based Access Control</li>
-									<li>Single Sign-On</li>
+									<li>Single Sign-On (SAML / LDAP)</li>
 									<li class="important">Self-Hosted Console</li>
 									<li class="important">24/7 Support</li>
 								</ul>
