--- a/pages/enterprise.tmpl
+++ b/pages/enterprise.tmpl
@@ -3,7 +3,7 @@
   <div class="container">
     <div class="d-flex flex-md-row flex-column justify-content-between">
       <div class="p-2 pt-2 mt-2 mt-md-1">
-        <h1>Your Private Container Management Platform</h1>
+        <h1>Enterprise Container Management</h1>
         <h2>Maximize Developer Productivity<h2>
             <h2>Meet Your Security and Compliance Needs</h2>
             <div class="buttons">
