--- a/pages/blog/post.tmpl
+++ b/pages/blog/post.tmpl
@@ -1,33 +1,83 @@
 {{ define "head" }}
-	<meta name="description" content="{{.Description}}">
-	<title>{{.Title}}</title>
+<meta name="description" content="{{.Description}}">
+<title>{{.Title}}</title>
 
-	<meta property="og:description" content="{{.Description}}">
-	<meta property="og:image" content="{{.OgImage}}">
-	<meta property="og:site_name" content="Convox Blog">
-	<meta property="og:title" content="{{.Title}}">
-	<meta property="og:type" content="article">
-	<meta property="og:url" content="{{.URL}}">
+<meta property="og:description" content="{{.Description}}">
+<meta property="og:image" content="{{.OgImage}}">
+<meta property="og:site_name" content="Convox Blog">
+<meta property="og:title" content="{{.Title}}">
+<meta property="og:type" content="article">
+<meta property="og:url" content="{{.URL}}">
 
-	<meta name="twitter:description" content="{{.Description}}">
-	<meta name="twitter:image" content="{{.OgImage}}">
-	<meta name="twitter:site" content="@goconvox">
-	<meta name="twitter:title" content="{{.Title}}">
+<meta name="twitter:description" content="{{.Description}}">
+<meta name="twitter:image" content="{{.OgImage}}">
+<meta name="twitter:site" content="@goconvox">
+<meta name="twitter:title" content="{{.Title}}">
 
-	{{ range .Tags }}
-	<meta property="article:tag" content="{{.}}">
-	{{ end }}
+{{ range .Tags }}
+<meta property="article:tag" content="{{.}}">
+{{ end }}
 {{ end }}
 {{ define "content" }}
-	<div class="container">
-		{{ with .Post }}
-			<div class="blog post p-4 pl-5 pr-5">
-				<h1>{{.Title}}</h1>
-				<div class="body">
-					{{ body .Body }}
-				</div>
-			</div>
-		{{ end }}
+<div class="container">
+	{{ with .Post }}
+	<div class="blog post p-4 pl-5 pr-5">
+		<h1>{{.Title}}</h1>
+		<div class="body">
+			{{ body .Body }}
+		</div>
+		<hr>
+		<div style="text-align:center;">
+			<ul style="list-style-type: none; margin: 0; padding: 0; overflow: hidden; text-align: center;">
+				<li style="display: inline-block; text-align: center; padding: 20px;">
+					<a class="btn btn-primary text-light" href="https://console.convox.com/signup">
+						Get Started
+						<i class="far fa-arrow-alt-circle-right ml-1"></i>
+					</a>
+				</li>
+				<li style="display: inline-block; text-align: center; padding: 20px;">
+					<!-- Calendly link widget begin -->
+					<link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
+					<script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript"></script>
+					<a class="btn btn-primary text-light" href=""
+						onclick="Calendly.initPopupWidget({url: 'https://calendly.com/cameron-convox/30min'});return false;">
+						Schedule a Demo
+						<i class="fas fa-desktop ml-1"></i>
+					</a>
+					<!-- Calendly link widget end -->
+				</li>
+			</ul>
+		</div>
+		<hr>
 	</div>
-{{ end }}
+	{{ end }}
+	<!-- Begin Mailchimp Signup Form -->
+	<link href="//cdn-images.mailchimp.com/embedcode/horizontal-slim-10_7.css" rel="stylesheet" type="text/css">
+	<style type="text/css">
+		#mc_embed_signup {
+			background: #fff;
+			clear: left;
+			font: 14px Helvetica, Arial, sans-serif;
+			width: 100%;
+		}
+	</style>
+	<div id="mc_embed_signup">
+		<form action="https://convox.us10.list-manage.com/subscribe/post?u=55a0526a0c4fd5e0010c9bae3&amp;id=69fa821fe6"
+			method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate"
+			target="_blank" novalidate>
+			<div id="mc_embed_signup_scroll">
+				<label for="mce-EMAIL">Signup to receive our monthly newsletter</label>
+				<input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address"
+					required>
+				<!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+				<div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text"
+						name="b_55a0526a0c4fd5e0010c9bae3_69fa821fe6" tabindex="-1" value=""></div>
+				<div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe"
+						class="button"></div>
+			</div>
+		</form>
+	</div>
 
+	<!--End mc_embed_signup-->
+</div>
+{{ end }}
