--- a/pages/layout.tmpl
+++ b/pages/layout.tmpl
@@ -40,11 +40,9 @@
 
 					<div class="collapse navbar-collapse" id="navbar-collapse">
 						<ul class="navbar-nav ml-auto mr-2">
-							<li class="nav-item ml-1 ml-md-4 mr-4 mr-md-0 {{ if eq .Active "features" }}active{{ end }}"><a class="nav-link" href="/features">Features</a></li>
+							<li class="nav-item ml-1 ml-md-4 mr-4 mr-md-0 {{ if eq .Active "pro" }}active{{ end }}"><a class="nav-link" href="/pro">Convox Pro</a></li>
 							<li class="nav-item ml-1 ml-md-4 mr-4 mr-md-0 {{ if eq .Active "blog" }}active{{ end }}"><a class="nav-link" href="/blog">Blog</a></li>
-							<li class="nav-item ml-1 ml-md-4 mr-4 mr-md-0"><a class="nav-link" href="https://docs.convox.com">Docs</a></li>
-							<li class="nav-item ml-1 ml-md-4 mr-4 mr-md-0 {{ if eq .Active "enterprise" }}active{{ end }}"><a class="nav-link" href="/enterprise">Enterprise</a></li>
-							<li class="nav-item ml-1 ml-md-4 mr-4 mr-md-0 {{ if eq .Active "pricing" }}active{{ end }}"><a class="nav-link" href="/pricing">Pricing</a></li>
+							<li class="nav-item ml-1 ml-md-4 mr-4 mr-md-0"><a class="nav-link" href="https://docs.convox.com">Documentation</a></li>
 						</ul>
 
 						<ul class="navbar-nav ml-4 d-none d-lg-flex">
@@ -65,7 +63,7 @@
 				<div class="container">
 					<ul class="navbar-nav d-none d-sm-block">
 						<li class="nav-item pl-3">
-							&copy; 2019 Convox, Inc. All rights reserved.
+							&copy; 2020 Convox, Inc. All rights reserved.
 						</li>
 					</ul>
 					<ul class="navbar-nav pr-2">
