tweak pro heading (#785)

--- a/pages/index.tmpl
+++ b/pages/index.tmpl
@@ -126,7 +126,7 @@
 	</div>
 	<div class="section">
 		<div class="container">
-			<h1>Enhanced features with Convox for Teams</h1>
+			<h1>Enhanced features with Convox Pro</h1>
 			<div class="features features-4">
 				<div class="feature">
 					<h2>
