update terms to include providers other than AWS (#788)

--- a/pages/terms.tmpl
+++ b/pages/terms.tmpl
@@ -41,7 +41,7 @@
       Your permission to use Convox Console entitles you to do the following:
 
       <ol>
-        <li>You may configure and administer installation of Rack, Convox's platform-as-a-service, on your Amazon Web Services (_AWS_) account.</li>
+        <li>You may configure and administer installation of Rack, Convox's platform-as-a-service, on your Cloud Services Provider [Amazon Web Services, Google Cloud Platform, DigitalOcean, Microsoft Azure] (_Cloud Provider_) account.</li>
         <li>You may create and deploy builds of software services to Racks managed with Convox Console.</li>
         <li>You may enable and disable integrations with third-party services like GitHub and Slack.</li>
         <li>You may manage members of your organization with access to Racks managed with Convox Console.</li>
@@ -64,7 +64,7 @@
       <ol>
         <li>You will not submit any content that is illegal, offensive, or otherwise harmful to Convox Console.  Neither will you submit any content in violation of law, infringing the intellectual property rights of others, violating the privacy or other rights of others, or in violation of any agreement with a third party.</li>
         <li>You will not use Convox Console to violate any law.</li>
-        <li>You will not use or attempt to use another person's Convox Console account, or attempt to use any Convox Console account with AWS credentials for another's account without their permission.</li>
+        <li>You will not use or attempt to use another person's Convox Console account, or attempt to use any Convox Console account with Cloud Provider credentials for another's account without their permission.</li>
         <li>You will not automate access to, use, or monitor the Website, such as with a web crawler, browser plug-in or add-on, or other computer program that is not a web browser.  Use your Racks' APIs instead.</li>
         <li>You will not submit material containing malicious computer code, such as computer viruses, computer worms, rootkits, back doors, adware, or spyware, to Convox Console in such a way that you should expect to harm Convox or other users of Convox Console.</li>
         <li>You will not falsely imply that you are affiliated with or endorsed by Convox.</li>
@@ -101,7 +101,7 @@
 
       <h2>Your Amazon Web Services Credentials</h2>
 
-      In order to deploy and manage software on Racks with Convox Console, you must provide Convox Console with access credentials for provisioning and managing AWS services on an AWS account.  Convox will use your credentials only to install Racks and manage applications as you instruct via Convox Console.  Convox may store your credentials on computers that Convox uses to operate, monitor, and improve Convox Console, including computers provisioned by others.  Convox will not publish or share your Amazon Web Services credentials with anyone else.
+      In order to deploy and manage software on Racks with Convox Console, you must provide Convox Console with access credentials for provisioning and managing Cloud Provider services on a Cloud Provider account.  Convox will use your credentials only to install Racks and manage applications as you instruct via Convox Console.  Convox may store your credentials on computers that Convox uses to operate, monitor, and improve Convox Console, including computers provisioned by others.  Convox will not publish or share your Amazon Web Services credentials with anyone else.
 
       <h2>Feedback</h2>
 
